docs: overhaul documentation and upgrade dependencies to Next.js 16/Tailwind 4

--- a/docs/project_flow_report.mdx
+++ b/docs/project_flow_report.mdx
@@ -4,7 +4,7 @@
 **Version:** 2.0  
 **Date:** January 4, 2026  
 **Tech Stack:** Next.js 16.1.1, React, TypeScript, Python FastAPI, Firebase Auth  
-**Report Location:** `C:\Users\Yash\.gemini\antigravity\brain\7e5b7d3a-6977-46f8-96fe-50d99fc48053\project_flow_report.md`
+**Report Location:** `C:\Users\Yash\.gemini\antigravity\brain\7e5b7d3a-6977-46f8-96fe-50d99fc48053\project_flow_report.mdx`
 
 ---
 
